--- a/HeatTransfer_ESS431.ipynb
+++ b/HeatTransfer_ESS431.ipynb
@@ -95,7 +95,7 @@
     "zs = np.arange(0,100,0.1)   # a set of distances\n",
     "\n",
     "# Run the function\n",
-    "T = surfacePerturbation(T0,dT,t,xs)\n",
+    "T = surfacePerturbation(T0,dT,t,zs)\n",
     "\n",
     "# Plot\n",
     "plt.plot(T,zs,'k')\n",
@@ -428,7 +428,7 @@
     "\n",
     "# Plot for selected times\n",
     "interval=100\n",
-    "for i in range(len(ts)/interval):\n",
+    "for i in range(len(ts)//interval):\n",
     "    idx = i*interval\n",
     "    t = ts[idx]\n",
     "    T = Ts[idx]\n",
