Change interval for animation

--- a/HeatTransfer_ESS431.ipynb
+++ b/HeatTransfer_ESS431.ipynb
@@ -477,7 +477,7 @@
     "    t = ts[idx]\n",
     "    T = Ts[idx]\n",
     "    # Plot\n",
-    "    plt.plot(T,zs,'k',alpha=0.25+0.75*(t*maxt/max(ts)),label='%.2f'%t)\n",
+    "    plt.plot(T,zs,'k',alpha=0.25+0.75*(t/max(ts)),label='%.2f'%t)\n",
     "    \n",
     "plt.legend(title='Years')\n",
     "plt.ylabel('Depth (m)');\n",
@@ -1380,7 +1380,7 @@
     "# blit=True says to only replot what has changed (this makes the function run faster)\n",
     "import matplotlib.animation as animation\n",
     "ani = animation.FuncAnimation(fig, animate, fargs=(Ts,ts,zs),init_func=init,\n",
-    "                                     frames=len(ts), interval=1, blit=True)"
+    "                                     frames=len(ts), interval=10, blit=True)"
    ]
   },
   {
