Change the indexing to an integer

--- a/HeatTransfer_ESS431.ipynb
+++ b/HeatTransfer_ESS431.ipynb
@@ -246,7 +246,7 @@
     "plt.figure(figsize=(12,6))\n",
     "ax1 = plt.subplot(121)\n",
     "# Run and plot for all the times\n",
-    "for t in ts[::len(ts)/n_profiles]:\n",
+    "for t in ts[::len(ts)//n_profiles]:\n",
     "    # Run the function\n",
     "    T = harmonicSurface(T0,Ta,t,zs,omega)\n",
     "    # Plot\n",
@@ -260,7 +260,7 @@
     "\n",
     "ax2 = plt.subplot(122)\n",
     "# Plot the time series for all depths\n",
-    "for z in zs[::len(zs)/n_profiles]:\n",
+    "for z in zs[::len(zs)//n_profiles]:\n",
     "    T = harmonicSurface(T0,Ta,ts,z,omega)\n",
     "    # Plot\n",
     "    plt.plot(ts,T,'k',alpha=0.25+0.75*float(z)/max(zs),label='%.0f'%z)\n",
