Update some notes and change z_5 to z_1

--- a/HeatTransfer_ESS431.ipynb
+++ b/HeatTransfer_ESS431.ipynb
@@ -14,9 +14,11 @@
     "\n",
     "##### Initial comments on using this notebook: \n",
     "\n",
+    "- If you are viewing this from a .pdf or .docx, please use the binder to open a Jupyter instance here, https://mybinder.org/v2/gh/benhills/ESS431_Labs/master.\n",
+    "\n",
     "- There are different cells for code and for 'markdown' which is the text. If you double click on the text you can change it, but there is no reason to do that now.\n",
     "\n",
-    "- I have provided helper notes on locations where I think that you should change the code to play around with one of the models (### Please Change! ###) as well as notes in places where you probably shouldn't change the code (### Don't Change ###). Having said that, if you are familiar with python feel free to change whatever you want.\n",
+    "- We have provided helper notes on locations where we think that you should change the code to play around with one of the models (### Please Change! ###) as well as notes in places where you probably shouldn't change the code (### Don't Change ###). Having said that, if you are familiar with python feel free to change whatever you want.\n",
     "\n",
     "- The code can be run with the buttons at the top or from the keyboard. Press 'Shift+Enter' to run a cell and advance to the next cell or 'Ctrl+Enter' to run a cell and stay in it.\n",
     "\n",
@@ -31,7 +33,7 @@
    "source": [
     "### Don't Change ###\n",
     "\n",
-    "# Import the libraries that we are going to need\n",
+    "# Import the python libraries that we are going to need\n",
     "%matplotlib notebook\n",
     "import ipywidgets\n",
     "from heat_transfer_functions_and_plotting import *"
@@ -43,9 +45,9 @@
    "source": [
     "## 1) Surface Perturbation\n",
     "\n",
-    "First, we will examine a very simple scenario where the entire domain begins at one temperature then the surface is perturbed to a new temperature. Heat will begin to diffuse into the domain and warm up the ice below the surface.\n",
+    "First, we will examine a very simple scenario where the entire domain begins at one temperature then the surface is perturbed to a new temperature. A real-world example would be if the Earth's climate changed and air temperatures increased. Heat will begin to diffuse into the domain and warm up the ice below the surface.\n",
     "\n",
-    "Everything is set up for you below, but try adjusting some of the parameters like, dT (temperature change), t (time), and $\\alpha$ (diffusivity) to get a feeling for the time scales for diffusion of this surface perturbation."
+    "Everything is set up for you below, but try adjusting some of the parameters like, dT (temperature change in $^\\circ$C), t (time in years), and $\\alpha$ (diffusivity in $m^2/yr$) to get a feeling for the time scales for diffusion of this surface perturbation."
    ]
   },
   {
@@ -85,9 +87,12 @@
    "source": [
     "## 2) Harmonic Surface Temperature\n",
     "\n",
-    "Now we are going to let the surface temperature change in time. If we choose to make the surface temperature a sinusoidal function, there is again a solution to the heat equation.\n",
+    "Now we are going to let the surface temperature change in time. Real-world examples of this would be the diurnal or seasonal air temperature changes. If we choose to make the surface temperature a sinusoidal function, there is again a solution to the heat equation.\n",
     "\n",
-    "Same as before, we want to play around with this model to get a feel for how it works. There are some initial values to try out, but try different numbers to get a feel for the behavior."
+    "Same as before, we want to play around with this model to get a feel for how it works. There are some initial values to try out, but try different numbers to develop an intuition for the behavior: \n",
+    "1. Set the depth (z) to 0 meters (at the surface). There you should see the sine wave that matches the surface air temperature. \n",
+    "2. Move the depth slider down to see how the amplitude of the wave decays with depth.\n",
+    "3. Move the time slider back and forth to see how the deeper temperature lags the surface wave."
    ]
   },
   {
@@ -98,6 +103,7 @@
    "source": [
     "### Please Change! ###\n",
     "\n",
+    "# Period (in years)\n",
     "P_omega = 1.\n",
     "\n",
     "### Don't Change ###\n",
@@ -130,15 +136,15 @@
     "\n",
     "In Cuffey and Paterson (2010) Chapter 9, they give us some helpful insight into an equation for the function that we were using above: \n",
     "\n",
-    "The amplitude of the sinusoidal temperature wave decreases as $exp(−z\\sqrt{\\frac{\\pi \\omega}{\\alpha}})$. Thus, the higher the frequency, the more rapid the attenuation with depth. Calculate the depth at which the temperature variations are 5% of the surface variations:\n",
+    "The amplitude of the sinusoidal temperature wave decreases as $exp(−z\\sqrt{\\frac{\\pi \\omega}{\\alpha}})$. Thus, the higher the frequency, the more rapid the attenuation with depth. Calculate the depth at which the temperature variations are 1% of the surface variations:\n",
     "\n",
-    "$$ z_5 = -ln(0.05)\\sqrt{\\frac{\\alpha}{\\pi \\omega}} $$\n",
+    "$$ z_1 = -ln(0.01)\\sqrt{\\frac{\\alpha}{\\pi \\omega}} $$\n",
     "\n",
     "Temperature maxima and minima propagate at a velocity:\n",
     "\n",
     "$$ v = 2\\sqrt{\\pi \\omega \\alpha} $$\n",
     "\n",
-    "Use the equations above to fill in the table from their book (reproduced below). This is started for you in the code cell below. Note that they use period $P_\\omega$ (we are using frequency $\\omega = \\frac{1}{P_\\omega}$). You could complete the table with only the equations, but try playing with the model above to visualize the result.\n",
+    "Use the equations above to fill in the table from their book (reproduced below but changed for our choice of $z_1$). This is started for you in the code cell below. Note that they use period $P_\\omega$ (we are using frequency $\\omega = \\frac{1}{P_\\omega}$). You could complete the table with only the equations, but try playing with the model above to visualize the result.\n",
     "\n",
     "<img src=\"./candpTable.png\" width=\"400\">"
    ]
@@ -158,10 +164,10 @@
     "omega = 1./P_omega\n",
     "\n",
     "# Calculate the depth at which variations are 5% of the surface\n",
-    "z5 = -np.log(0.05)*np.sqrt(alpha*spy/(np.pi*omega))\n",
+    "z1 = -np.log(0.01)*np.sqrt(alpha*spy/(np.pi*omega))\n",
     "\n",
     "# Print the output\n",
-    "print('For P_omega =',round(P_omega,2),'years ; z5 =',round(z5,2),'meters')"
+    "print('For P_omega =',round(P_omega,2),'years ; z1 =',round(z1,2),'meters')"
    ]
   },
   {
