Small change to language

--- a/HeatTransfer/HeatTransfer.ipynb
+++ b/HeatTransfer/HeatTransfer.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "- How do the results compare to your intuition about how long it should take for heat to diffuse into the ice?\n",
     "\n",
-    "- If the temperature change is bigger does the perturbation propagate faster? or is it simply a scaling factor?"
+    "- If the temperature change (dT) is bigger does the perturbation propagate into the ice faster in time? or is it simply a scaling factor where the profile maintains its shape but the magnitude is scaled by dT?"
    ]
   },
   {
