Add a notebook for Advection-Diffusion
I want students to play around with advection and diffusion using the
Robin solution.

--- a/HeatTransfer/Diffusion.ipynb
+++ b/HeatTransfer/Diffusion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Heat Transfer in Ice\n",
+    "# Thermal Diffusion in Ice\n",
     "\n",
     "This week’s lab is designed to give you a better intuition regarding the time scales of heat diffusion in ice, described by the heat equation\n",
     "\n",
@@ -36,7 +36,8 @@
     "# Import the python libraries that we are going to need\n",
     "%matplotlib notebook\n",
     "import ipywidgets\n",
-    "from heat_transfer_functions_and_plotting import *"
+    "from heat_transfer_functions import *\n",
+    "from heat_transfer_plotting import *"
    ]
   },
   {
@@ -104,21 +105,21 @@
     "### Please Change! ###\n",
     "\n",
     "# Period (in years)\n",
-    "P_omega = 1.\n",
+    "P_omega = 1e5\n",
     "\n",
     "# ---------------------------------------------------------------------------\n",
     "\n",
     "### Don't Change ###\n",
     "\n",
     "# Set arrays for depth and time\n",
-    "zs = np.linspace(0,20,100)\n",
+    "zs = np.linspace(0,2000,100)\n",
     "ts = np.linspace(0,P_omega,100)\n",
     "\n",
     "# Plot the figure using a local plotting function\n",
     "l1,p1,l2,p2 = harmonic_interactive(zs=zs,ts=ts,omega = 1./P_omega)\n",
     "\n",
     "# An update function for the interactive figure\n",
-    "def update(z = (0,20), t = (0,P_omega,P_omega/100.)):\n",
+    "def update(z = (min(zs),max(zs)), t = (min(ts),max(ts),max(ts)/100.)):\n",
     "    T = harmonicSurface(0,1.,ts,z,1./P_omega)\n",
     "    l1.set_ydata(T)\n",
     "    p1.set_data(np.transpose([t,T[np.argmin(abs(ts-t))]]))\n",
@@ -142,9 +143,13 @@
     "\n",
     "$$ z_1 = -ln(0.01)\\sqrt{\\frac{\\alpha}{\\pi \\omega}} $$\n",
     "\n",
-    "Temperature maxima and minima propagate at a velocity:\n",
+    "Since it takes time for heat to diffuse downward, there is a lag between the surface temperature max/min and the max/min seen at some depth. In order to calculate that time lag, we first know that the temperature max/min propagate at a velocity:\n",
     "\n",
     "$$ v = 2\\sqrt{\\pi \\omega \\alpha} $$\n",
+    "\n",
+    "Then the time lag is:\n",
+    "\n",
+    "$$ \\Delta t = z_1/v $$\n",
     "\n",
     "Use the equations above to fill in the table from their book (reproduced below but changed for our choice of $z_1$). This is started for you in the code cell below. Note that they use period $P_\\omega$ (we are using frequency $\\omega = \\frac{1}{P_\\omega}$). You could complete the table with only the equations, but try playing with the model above to visualize the result.\n",
     "\n",
@@ -157,18 +162,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Please Change! ###\n",
+    "# Import python library, 'numerical python'\n",
+    "import numpy as np\n",
     "\n",
+    "# You will need this for some numerical terms like the number Pi\n",
+    "print(np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Some constants that you will need\n",
+    "alpha = alpha # Thermal diffusivity (units = m^2/s)\n",
+    "spy = spy # For converting from seconds to years (seconds per year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Input the period\n",
-    "P_omega = 1.\n",
-    "\n",
+    "P_omega = 1e5\n",
     "# Frequency is 1 over period\n",
-    "omega = 1./P_omega\n",
+    "omega = 1./P_omega"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Calculations --- #\n",
     "\n",
     "# Calculate the depth at which variations are 5% of the surface\n",
     "z1 = -np.log(0.01)*np.sqrt(alpha*spy/(np.pi*omega))\n",
     "\n",
-    "# Print the output\n",
+    "# Calculate the velocity (try doing this on your own; be careful with the units on alpha)\n",
+    "\n",
+    "# Calculate the time lag (try doing this on your own)\n",
+    "\n",
+    "# --- Print the output --- #\n",
+    "# Add items to print for v and Δt (try doing this on your own)\n",
     "print('For P_omega =',round(P_omega,2),'years ; z1 =',round(z1,2),'meters')"
    ]
   },
@@ -176,9 +216,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question on Real Data\n",
+    "### Questions on Real Data\n",
     "\n",
     "Below is a plot of real temperatures measured from the Greenland Ice Sheet ablation zone. The 'winter cold wave' persists in the ice well into the summer months. Does this agree with your results above? What was the $\\Delta t$ that you got for 1yr? Is it about the same as in the data?  \n",
+    "\n",
+    "What do you think might be the heat source for the rapid warming seen by the vertical red lines?\n",
     "\n",
     "<img src=\"./data.png\" width=\"600\">"
    ]
