--- a/HeatTransfer/Diffusion_2.ipynb
+++ b/HeatTransfer/Diffusion_2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Heat Transfer in Ice (Advanced)\n",
+    "# Thermal Diffusion in Ice (Advanced)\n",
     "\n",
     "This is the second notebook on heat transfer in ice. It will not make much sense without doing #1 first.\n",
     "\n",
@@ -36,7 +36,8 @@
     "# Import the python libraries that we are going to need\n",
     "%matplotlib notebook\n",
     "import ipywidgets\n",
-    "from heat_transfer_functions_and_plotting import *"
+    "from heat_transfer_functions import *\n",
+    "from heat_transfer_plotting import *"
    ]
   },
   {
@@ -48,22 +49,37 @@
     "### Please Change! ###\n",
     "\n",
     "# Set up the problem with these constants\n",
-    "T0 = 0.                       # mean temperature\n",
+    "T0 = -10.                     # mean temperature\n",
     "Ta = 1.                       # amplitude of temperature variations\n",
     "dt = 0.01                     # time step, be careful here if you take too big a time step the model will break\n",
     "dz = .1                       # distance step, again if the model breaks revisit this variable\n",
     "ts = np.arange(0,1+dt,dt)     # time in years\n",
     "zs = np.arange(0,20+dz,dz)    # a set of distances in meters\n",
-    "omega = 1.                    # frequency of oscillation (cycles per yr)\n",
+    "ω = 1.                        # frequency of oscillation (cycles per yr)\n",
     "\n",
     "# Surface Boundary\n",
-    "Tsurface = T0 + Ta*np.sin(2.*np.pi*omega*ts)\n",
+    "Tsurface = T0 + Ta*np.sin(2.*np.pi*ω*ts)\n",
     "\n",
-    "# ---------------------------------------------------------------------------\n",
+    "# -----------------------------------------------------------------------------------------\n",
     "\n",
     "### Don't Change ###\n",
     "\n",
-    "from heat_transfer_functions_and_plotting import numericalModel, numerical_interactive\n",
+    "plt.figure(figsize=(4,3))\n",
+    "plt.plot(ts,Tsurface,'k')\n",
+    "plt.title('Surface Temperature')\n",
+    "plt.xlabel('Time (years)')\n",
+    "plt.ylabel('Temperature ($^\\circ$C)')\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Don't Change ###\n",
+    "\n",
     "T = numericalModel(zs=zs,ts=ts,dt=dt,BC_upper=Tsurface)\n",
     "\n",
     "l1,p1,l2,p2 = numerical_interactive(T,zs,ts,max(ts),10)\n",
