Update Diffusion.ipynb to use %matplotlib widget

--- a/HeatTransfer/Diffusion.ipynb
+++ b/HeatTransfer/Diffusion.ipynb
@@ -34,7 +34,7 @@
     "### Don't Change ###\n",
     "\n",
     "# Import the python libraries that we are going to need\n",
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "import ipywidgets\n",
     "from heat_transfer_functions import *\n",
     "from heat_transfer_plotting import *"
