Update Diffusion.ipynb - notes and typo changes

--- a/HeatTransfer/Diffusion.ipynb
+++ b/HeatTransfer/Diffusion.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "$$ \\frac{\\partial T}{\\partial t} = \\alpha \\nabla^2 T $$\n",
     "\n",
-    "To gain experience with some solutions to this heat equation, we have prepared a Python notebook. The idea is to allow you to vary input parameters for a few scenarios and learn to better anticipate what the results might be. It is not important that you have a background in coding with python. Rather, the intent here is that you adjust inputs to the functions and think about the results.\n",
+    "To gain experience with some solutions to this heat equation, we have prepared a Python notebook. The idea is to allow you to vary input parameters for a few scenarios and learn to better anticipate what the resulting temperature profile might be. It is not important that you have a background in coding with Python. Rather, the intent here is that you adjust inputs to the functions and think about the results.\n",
     "\n",
     "##### Initial comments on using this notebook: \n",
     "\n",
@@ -200,7 +200,7 @@
    "source": [
     "# --- Calculations --- #\n",
     "\n",
-    "# Calculate the depth at which variations are 5% of the surface\n",
+    "# Calculate the depth at which variations are 1% of the surface\n",
     "z1 = -np.log(0.01)*np.sqrt(alpha*spy/(np.pi*omega))\n",
     "\n",
     "# Calculate the velocity (try doing this on your own; be careful with the units on alpha)\n",
