--- a/Advection_Diffusion/Advection_Diffusion.ipynb
+++ b/Advection_Diffusion/Advection_Diffusion.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### Don't Change ###\n",
@@ -57,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### Don't Change ###\n",
@@ -82,20 +86,22 @@
     "\n",
     "1) Briefly describe how each of the variables (Ts, qgeo, H, adot) control the glacier temperature profile.\n",
     "\n",
-    "2) Use the calculated temperature profile to calculate a temperature gradient near the bed and compare that to the geothermal flux (the next few cells will walk you through this). Remember that the thermal conductivity is important here ($k_{ice}=2.1 W/mK$):\n",
-    "\n",
-    "$$ \\frac{q_{geo}}{k} = -\\frac{\\partial T}{\\partial z} $$"
+    "2) Use the modeled temperature profile to calculate a temperature gradient near the bed and compare that to the geothermal flux ($qgeo = 50 mW/m^2$). The next few cells will walk you through this. Remember that the thermal conductivity is important here ($k_{ice}=2.1 W/mK$):\n",
+    "$$ \\frac{q_{geo}}{k} = -\\frac{\\partial T}{\\partial z} $$\n",
+    "Why might your calcluated temperature gradient (right hand side) be slightly different from the input geothermal flux and thermal conductivity (left hand side)?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# First, recalculate the temperature profile for a given parameter input\n",
     "Ts = -50.\n",
-    "qgeo =0.05\n",
+    "qgeo = 0.05\n",
     "H = 2000.\n",
     "adot = 0.1\n",
     "\n",
@@ -105,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Index a particular point in the temperature or depth array\n",
@@ -121,26 +129,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Now, index the bottom two points in the profile and use them to calculate a temperature gradient (dT/dz)"
+    "# Now, index the bottom two points in the profile and use them to calculate a temperature gradient (dT/dz)\n",
+    "\n",
+    "# Uncomment these lines and use them to calculate the temperature and height differences between points\n",
+    "#dT = \n",
+    "#dz = \n",
+    "\n",
+    "dTdz = dT/dz"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Compare the temperature gradient to what it is 'supposed to be' from the geothermal flux\n",
+    "qgeo = 0.05\n",
     "k = 2.1"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -154,7 +173,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.16"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
