--- a/Advection_Diffusion/Diffusion.ipynb
+++ b/Advection_Diffusion/Diffusion.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### Don't Change ###\n",
@@ -54,7 +56,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### Don't Change ###\n",
@@ -99,20 +103,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### Please Change! ###\n",
     "\n",
     "# Period (in years)\n",
-    "P_omega = 1e5\n",
+    "P_omega = 1\n",
+    "zmax = 10\n",
     "\n",
     "# ---------------------------------------------------------------------------\n",
     "\n",
     "### Don't Change ###\n",
     "\n",
     "# Set arrays for depth and time\n",
-    "zs = np.linspace(0,2000,100)\n",
+    "zs = np.linspace(0,zmax,100)\n",
     "ts = np.linspace(0,P_omega,100)\n",
     "\n",
     "# Plot the figure using a local plotting function\n",
@@ -122,10 +129,10 @@
     "def update(z = (min(zs),max(zs)), t = (min(ts),max(ts),max(ts)/100.)):\n",
     "    T = harmonicSurface(0,1.,ts,z,1./P_omega)\n",
     "    l1.set_ydata(T)\n",
-    "    p1.set_data(np.transpose([t,T[np.argmin(abs(ts-t))]]))\n",
+    "    p1.set_data([t],[T[np.argmin(abs(ts-t))]])\n",
     "    T = harmonicSurface(0,1.,t,zs,omega=1./P_omega)\n",
     "    l2.set_xdata(T)\n",
-    "    p2.set_data(np.transpose([T[np.argmin(abs(zs-z))],z]))\n",
+    "    p2.set_data([T[np.argmin(abs(zs-z))]],[z])\n",
     "\n",
     "# Update with the sliders\n",
     "ipywidgets.interactive(update)"
@@ -159,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Import python library, 'numerical python'\n",
@@ -172,7 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Some constants that you will need\n",
@@ -183,7 +194,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Input the period\n",
@@ -195,7 +208,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# --- Calculations --- #\n",
@@ -228,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +257,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.16"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
