--- a/Advection_Diffusion/Diffusion_2.ipynb
+++ b/Advection_Diffusion/Diffusion_2.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### Don't Change ###\n",
@@ -43,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### Please Change! ###\n",
@@ -75,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### Don't Change ###\n",
@@ -87,9 +93,9 @@
     "# An update function for the interactive figure\n",
     "def update(z_idx = (0,len(zs)-1), t_idx = (0,len(ts)-1)):\n",
     "    l1.set_ydata(T[1:,z_idx])\n",
-    "    p1.set_data(np.transpose([ts[t_idx],T[t_idx+1,z_idx]]))\n",
+    "    p1.set_data([ts[t_idx]],[T[t_idx+1,z_idx]])\n",
     "    l2.set_xdata(T[t_idx,:])\n",
-    "    p2.set_data(np.transpose([T[t_idx,z_idx],zs[z_idx]]))\n",
+    "    p2.set_data([T[t_idx,z_idx]],[zs[z_idx]])\n",
     "    \n",
     "# Update with the sliders\n",
     "ipywidgets.interactive(update)"
@@ -111,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +131,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.16"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
