drop the warnings for plot labels and change some minor language in notebooks

--- a/Advection_Diffusion/Diffusion.ipynb
+++ b/Advection_Diffusion/Diffusion.ipynb
@@ -158,7 +158,7 @@
     "\n",
     "$$ \\Delta t = z_1/v $$\n",
     "\n",
-    "Use the equations above to fill in the table from their book (reproduced below but changed for our choice of $z_1$). This is started for you in the code cell below. Note that they use period $P_\\omega$ (we are using frequency $\\omega = \\frac{1}{P_\\omega}$). You could complete the table with only the equations, but try playing with the model above to visualize the result.\n",
+    "Use the equations above to fill in the table from their book (reproduced below but changed for our choice of $z_1$). This is started for you in the code cell below. Note that you can convert between the period ($P_\\omega$) and frequency ($\\omega$) with $\\omega = \\frac{1}{P_\\omega}$. You could complete the table with only the equations, but try playing with the model above to visualize the result.\n",
     "\n",
     "<img src=\"./candpTable.png\" width=\"400\">"
    ]
